--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
     <p>
-        <a href="https//" target="_blank">祝宋沅璘新年快乐</a><br>
+        <a href="https//EvaMay.github.io/EdgeLin.github.io/corestudi0.github.io/newyear
+/newyear.html" target="_blank">祝宋沅璘新年快乐</a><br>
     </p>
 </body>
 </html>
