--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <p>
-        <a href="https//EvaMay1112.github.io/EvaMay1112/EdgeLin.github.io/corestudi0.github.io/newyear
+        <a href="https//EvaMay1112.github.io/EdgeLin.github.io/corestudi0.github.io/newyear
 /newyear.html" target="_blank">祝宋沅璘新年快乐</a><br>
     </p>
 </body>
