--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>祝宋沅璘新年快乐</title>
+    <title>祝姐姐新年快乐</title>
 </head>
 <body>
     <p>
         <a href="https//EvaMay1112.github.io/EdgeLin.github.io/corestudi0.github.io/newyear
-/newyear.html" target="_blank">祝宋沅璘新年快乐</a><br>
+/newyear.html" target="_blank">祝姐姐新年快乐</a><br>
     </p>
 </body>
 </html>
