--- a/corestudi0.github.io/newyear/newyear.html
+++ b/corestudi0.github.io/newyear/newyear.html
@@ -1,5 +1,3 @@
-<!--Hey,你在这儿做什么awa?-->
-<!--\O.O/\O.O/-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +8,7 @@
         p{font-size:48px;}
         p{font-family:"楷体";}
     </style>
-    <title>祝我的宋沅璘小宝贝元旦快乐</title>
+    <title>祝姐姐元旦快乐</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -102,15 +100,15 @@
         <div class="page_two hide">
             <br><br>
             <div id="text" style="display:none;"> <br><br>
-                宋沅璘，哥哥祝你元旦快乐！<br><br>
+                姐姐，元旦快乐！<br><br>
                 龙年快乐 平安喜乐 2024万事如意🧨<br>
                 唯愿烟花像星辰   祝你所愿皆成真🧨<br><br>
                 祝你龙年顺利，福气连连！🌹<br><br>
-                你一定要快乐噢！<br><br>
-                要听爸爸妈妈哦   不然哥哥回去打屁屁哦<br><br>
-                期末考试要好好考哦<br><br>
+                前段时间真的很对不起，我不应该干涉姐姐的生活<br><br>
+                希望我们能回到小时候，友谊永远长存<br><br>
+                最后，姐姐的期末考试一定要好好考哦<br><br>
                 新的一年要更加努力哦<br><br>
-                              ————爱你的哥哥<br><br>
+                              ————想你的弟弟<br><br>
 
             </div><!--此处已进行修改，优化了倒计时11-->
             <div class="type_words boxText" id="contents" style="font-size:1.08rem;line-height:1.5rem;"></div>
